Update: تغيير العنوان الرئيسي إلى Professional Peeling Protocol ونقل الشعار القديم للفوتر - تحديث 4 لغات

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 data-i18n="heroTitle">Pure Nature, <span>Proven Results.</span></h1>
+                    <h1 data-i18n="heroTitle">Professional <span>Peeling Protocol</span></h1>
                     <p data-i18n="heroDesc">Advanced skincare formulations designed effectively for professional beauty
                         centers. Experience the power of marine algae.</p>
                     <a href="#products" class="btn btn-primary" data-i18n="discoverProducts">Discover Products</a>
